# GoalForge-AI

./: .gitignore  .vercelignore  CLAUDE.md  DEPLOY.md  README.md  environment.yml  model.json  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
api/: _engine.py  index.py  model.json  squad.py
app/: README.md  streamlit_app.py
configs/: annex_c.json  default.yaml
docs/: evaluation.md  game-online-setup.md  research_summary.md  workflow.md
public/: actual.json  app.js  bracket.js  compare.html  compare.js  forecast.json  game-online.html  game-online.js  game.html  game.js  honors.html  honors.js  i18n.js  index.html  live.html  live.js  live.json  match.html  odds.json  style.css  supabase-config.js  tournament.html  tournament.js  tournament.json
scripts/: build_actual.py  build_club_events.py  build_club_lineups.py  build_creation_stats.py  build_ens_layer.py  build_live.py  build_odds_public.py  build_tournament.py  build_wc2026_model.py  calibrate.py  evaluate.py  evaluate_assists.py  evaluate_players.py  export_model.py  fetch_understat_live.py  parse_annex_c.py  player_ml.py  run_pipeline.py  run_worldcup.py  scrape_wc2026.py  seed_virtual_users.mjs  settle_bets.mjs  simulate_wc2026.py  team_bakeoff.py  train.py  train_neural_v2.py  train_neural_v3.py
slurm/: build_ens.sbatch  env_setup.sh  rebuild_cutoff.sbatch  team_bakeoff.sbatch  train_neural.sbatch
supabase/: schema.sql
tests/: test_agent.py  test_api.py  test_baselines.py  test_compare.py  test_game.py  test_hierarchical.py  test_lineup.py  test_metrics.py  test_pipeline.py  (+6 more)
(+26 files in other folders)
