[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goalforge"
version = "0.0.1"
description = "Predict soccer match scores, scorers, and assists from starting lineups."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pyyaml",
]

[project.optional-dependencies]
statsbomb = ["statsbombpy"]      # real-data path (StatsBomb open data)
app = ["streamlit", "matplotlib"]  # web UI (app/streamlit_app.py)
api = ["fastapi", "uvicorn[standard]"]  # REST backend (src/goalforge/api/)
dev = ["pytest", "ruff", "httpx"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
